kubernetes/apps/base/velero/velero-ui/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: velero-ui-tinyauth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: velero-ui
  extAuth:
    failOpen: false
    headersToExtAuth:
      - cookie
      - x-forwarded-proto
      - x-forwarded-for
      - user-agent
    http:
      backendRefs:
        - group: ""
          kind: Service
          name: tinyauth
          namespace: tinyauth
          port: 3000
          weight: 1
      headersToBackend:
        - remote-user
        - remote-email
        - remote-name
        - remote-groups
      path: /api/auth/envoy?path=
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        name: allow-raj
        principal:
          headers:
            - name: Remote-Email
              values:
                - rajsinghcpre@gmail.com
      - action: Allow
        name: allow-kartik
        principal:
          headers:
            - name: Remote-Email
              values:
                - kartikbharath@gmail.com
